# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "i18n/i18n"

ohos_unittest("i18n_service_test") {
  module_out_path = module_output_path

  sources = [ "unittest/src/i18n_service_test.cpp" ]
  include_dirs = [
    "./unittest/include",
    "../../frameworks/intl/include",
    "../../interfaces/native/inner_api/preferred_language/include",
    "../../services/include",
  ]

  external_deps = [
    "ability_base:configuration",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson_static",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest",
    "hilog:libhilog",
    "ipc:ipc_core",
    "selinux_adapter:librestorecon",
  ]

  deps = [
    "../../frameworks/intl:build_module",
    "../../services:i18n_sa",
    "../../services:i18n_sa_client",
  ]

  defines = [ "SUPPORT_GRAPHICS" ]
}
