# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("libphonenumber_version_txt") {
  source = "./etc/libphonenumber/version.txt"
  module_install_dir = "etc/LIBPHONENUMBER/generic/"
  subsystem_name = "global"
  part_name = "i18n"
}

ohos_prebuilt_etc("taboo_version_txt") {
  source = "./etc/taboo/version.txt"
  module_install_dir = "etc/TABOO/generic/"
  subsystem_name = "global"
  part_name = "i18n"
}

ohos_prebuilt_etc("timezone_version_txt") {
  source = "./etc/timezone/version.txt"
  module_install_dir = "etc/TIMEZONE/generic/current/"
  subsystem_name = "global"
  part_name = "i18n"
}

ohos_prebuilt_etc("prefabrication_libphonenumber") {
  source = "./etc/libphonenumber/prefabrication"
  module_install_dir = "etc/LIBPHONENUMBER/mount_dir/"
  subsystem_name = "global"
  part_name = "i18n"
}

ohos_prebuilt_etc("prefabrication_timezone") {
  source = "./etc/timezone/prefabrication"
  module_install_dir = "etc/tzdata_distro/"
  subsystem_name = "global"
  part_name = "i18n"
}
