# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "i18n/intl_test"

ohos_unittest("intl_test") {
  module_out_path = module_output_path

  sources = [
    "unittest/i18n_test.cpp",
    "unittest/intl_test.cpp",
    "unittest/intl_test_extent.cpp",
    "unittest/locale_config_test.cpp",
    "unittest/mock/src/generate_ics_file.cpp",
    "unittest/mock/src/i18n_timezone_mock.cpp",
    "unittest/mock/src/phone_number_format_mock.cpp",
  ]
  include_dirs = [
    "//base/global/i18n/frameworks/intl/entity_recognition/include",
    "//base/global/i18n/frameworks/intl/entity_recognition/phone_number_recognition/include",
    "//base/global/i18n/frameworks/intl/entity_recognition/date_time_recognition/include",
    "//base/global/i18n/frameworks/intl/include",
    "//base/global/i18n/frameworks/intl/test/unittest/mock/include",
    "//base/global/i18n/interfaces/native/inner_api/i18n/include",
    "//base/global/i18n/interfaces/native/inner_api/preferred_language/include",
    "//base/global/i18n/services/include",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "googletest:gtest",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "init:libbegetutil",
    "libphonenumber:phonenumber_standard",
    "libpng:libpng",
    "openssl:libssl_shared",
  ]

  deps = [
    "//base/global/i18n/frameworks/intl:build_module",
    "//base/global/i18n/services:i18n_sa_client",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":intl_test" ]
}
