# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "i18n/zone_util_test"

ohos_unittest("zone_util_test") {
  module_out_path = module_output_path

  sources = [ "unittest/zone_util_test.cpp" ]
  include_dirs =
      [ "//base/global/i18n/interfaces/native/inner_api/zone/include" ]
  deps = [ "//base/global/i18n/frameworks/zone:zone_util" ]
  external_deps = [
    "c_utils:utils",
    "googletest:gtest",
    "libphonenumber:phonenumber_standard",
  ]
}
