# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/i18n/i18n.gni")
import("//build/ohos.gni")

ohos_shared_library("cj_intl_ffi") {
  include_dirs = [
    "../../../frameworks/intl/include",
    "../../js/kits/include",
    "include",
  ]

  defines = []

  deps = [ "../../../frameworks/intl:intl_util" ]
  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "ipc:ipc_core",
    "libphonenumber:phonenumber_standard",
    "libphonenumber:phonenumber_standard",
    "libpng:libpng",
    "libpng:libpng",
    "libxml2:libxml2",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "preferences:native_preferences",
    "samgr:samgr_proxy",
  ]
  sources = [
    "src/intl_ffi.cpp",
    "src/intl_impl.cpp",
  ]

  if (i18n_support_app_preferred_language) {
    defines += [ "SUPPORT_APP_PREFERRED_LANGUAGE" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "global"
  part_name = "i18n"
}
