# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("intl_ani") {
  shlib_type = "ani"
  include_dirs = [
    "./include",
    "../i18n/include",
  ]
  sources = [
    "../i18n/src/variable_converter.cpp",
    "./src/intl_addon.cpp",
    "./src/number_format_addon.cpp",
  ]
  deps = [ "../../../../frameworks/intl:intl_util" ]
  external_deps = [
    "hilog:libhilog",
    "icu:shared_icuuc",
    "libphonenumber:phonenumber_standard",
    "libpng:libpng",
    "libxml2:libxml2",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
  part_name = "i18n"
  subsystem_name = "global"
}

generate_static_abc("intl") {
  base_url = "./ets"
  files = [ "./ets/@ohos.intl.ets" ]
  is_boot_abc = "True"
  device_dst_file = "system/framework/intl.abc"
}

ohos_prebuilt_etc("intl_etc") {
  source = "$target_out_dir/intl.abc"
  module_install_dir = "framework"
  part_name = "i18n"
  subsystem_name = "global"
  deps = [ ":intl" ]
}
