# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/i18n/i18n.gni")
import("//build/ohos.gni")

group("build_module") {
  deps = [
    ":intl_napi",
    ":intl_register",
  ]
}

config("intl_register_config") {
  include_dirs = [ "//base/global/i18n/interfaces/js/innerkits/intl/include" ]
}

ohos_shared_library("intl_register") {
  branch_protector_ret = "pac_ret"
  public_configs = [ ":intl_register_config" ]
  include_dirs = [ "//base/global/i18n/frameworks/intl/include" ]
  sources = [ "src/replace_intl_module.cpp" ]
  version_script = "libintl_napi.map"
  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
  ]
  install_images = [ system_base_dir ]
  relative_install_dir = "platformsdk"
  subsystem_name = "global"
  innerapi_tags = [ "platformsdk" ]
  part_name = "i18n"
}

ohos_shared_library("intl_napi") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "//base/global/i18n/frameworks/intl/include",
    "//base/global/i18n/interfaces/js/innerkits/intl/include",
  ]

  sources = [
    "src/collator_addon.cpp",
    "src/displaynames_addon.cpp",
    "src/error_util.cpp",
    "src/intl_addon.cpp",
    "src/intl_date_time_format_addon.cpp",
    "src/intl_number_format_addon.cpp",
    "src/intl_plural_rules_addon.cpp",
    "src/intl_relative_time_format_addon.cpp",
    "src/js_lifecycle_managers.cpp",
    "src/js_utils.cpp",
    "src/locale_info_addon.cpp",
    "src/number_format_addon.cpp",
  ]
  use_exceptions = true
  version_script = "libintl_napi.map"
  deps = [ "//base/global/i18n/frameworks/intl:intl_util" ]
  external_deps = [
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "icu:shared_icuuc",
    "icu:shared_icui18n",
    "libphonenumber:phonenumber_standard",
    "napi:ace_napi",
  ]
  install_images = [ system_base_dir ]
  relative_install_dir = "platformsdk"
  subsystem_name = "global"
  innerapi_tags = [ "platformsdk" ]
  part_name = "i18n"
}
